add controller Usercontroller, view users, edited user index, add routes, addingtrue in admin lang routs chenger

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -45,6 +45,6 @@
     "Edit Role": "Изменить роль",
     "Back": "Назад",
     "Role has been updated successfully!": "Роль успешно обновлена!",
-    "Role has been deleted successfully": "Роль успешно удалена"
+    "Role has been deleted successfully!": "Роль успешно удалена!"
 
 }
