--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -46,6 +46,6 @@
     "Edit Role": "Редагувати роль",
     "Back": "Назад",
     "Role has been updated successfully!": "Роль успішно оновлено!",
-    "Role has been deleted successfully": "Роль успішно видалено"
+    "Role has been deleted successfully!": "Роль успішно видалено!"
 
 }
