--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -46,6 +46,12 @@
     "Edit Role": "Редагувати роль",
     "Back": "Назад",
     "Role has been updated successfully!": "Роль успішно оновлено!",
-    "Role has been deleted successfully!": "Роль успішно видалено!"
+    "Role has been deleted successfully!": "Роль успішно видалено!",
+    "User has been updated successfully!": "Користувача успішно оновлено!",
+    "User has been deleted successfully!": "Користувача успішно видалено!",
+    "Name": "Ім'я",
+    "Role": "Роль",
+    "Email": "Електронна пошта",
+    "Edit User": "Редагувати користувача"
 
 }
