Mamnipulate Likse in Profile

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -89,7 +89,9 @@
     "Preview Image": "Предварительный просмотр изображения",
     "Main Image": "Основное изображение",
     "Create": "Создать",
-
-    "Select a tags": "Выбрать теги"
+    "Select a tags": "Выбрать теги",
+    "Article Title": "Название статьи",
+    "My Likes": "Мои лайки",
+    "View": "​Посмотреть"
 
 }
