--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -90,6 +90,8 @@
     "Preview Image": "Попередній перегляд зображення",
     "Main Image": "Головне зображення",
     "Create": "Створити",
-    "Select a Tags": "Виберіть Теги"
-
+    "Select a Tags": "Виберіть Теги",
+    "Article Title": "Назва статті",
+    "My Likes": "Мої лайки",
+    "View": "​Подивитися"
 }
