--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -92,6 +92,9 @@
     "Select a tags": "Выбрать теги",
     "Article Title": "Название статьи",
     "My Likes": "Мои лайки",
-    "View": "​Посмотреть"
+    "View": "​Посмотреть",
+    "Welcome back!": "Добро пожаловать!",
+    "Welcome": "Добро пожаловать!",
+    "Your ad could be here.": "Тут можно было бы увидеть вашу рекламу"
 
 }
