--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -93,5 +93,8 @@
     "Select a Tags": "Виберіть Теги",
     "Article Title": "Назва статті",
     "My Likes": "Мої лайки",
-    "View": "​Подивитися"
+    "View": "​Подивитися",
+    "Welcome back!": "З поверненням!",
+    "Welcome": "Ласкаво просимо!",
+    "Your ad could be here.": "Тут могла бути ваша реклама"
 }
