--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -95,6 +95,7 @@
     "View": "​Посмотреть",
     "Welcome back!": "Добро пожаловать!",
     "Welcome": "Добро пожаловать!",
-    "Your ad could be here.": "Тут можно было бы увидеть вашу рекламу"
+    "Your ad could be here.": "Тут можно было бы увидеть вашу рекламу",
+    "Send reset link": "ссылка для сброса"
 
 }
