--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -22,7 +22,7 @@
     "Comments": "Коментарі",
     "More details": "Детальніше",
     "Forgot your password?": "Забули свій пароль?",
-    "Send reset link": "Надіслати посилання для скидання",
+    "Send reset link": "Посилання для скидання",
     "Reset Password": "Скинути пароль",
     "Don't have an account yet?": "У вас ще немає облікового запису?",
     "Remember Me": "Пам'ятай мене",
