filtres tags, categories

--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -96,5 +96,8 @@
     "View": "​Подивитися",
     "Welcome back!": "З поверненням!",
     "Welcome": "Ласкаво просимо!",
-    "Your ad could be here.": "Тут могла бути ваша реклама"
+    "Your ad could be here.": "Тут могла бути ваша реклама",
+    "Sorry, but there are no articles in this category yet": "Вибачте, але в цій категорії ще немає статей",
+    "Sorry, but there are no articles in this tag yet": "Вибачте, але з цим тегом ще немає статей",
+    "from": "із"
 }
