--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -96,6 +96,9 @@
     "Welcome back!": "Добро пожаловать!",
     "Welcome": "Добро пожаловать!",
     "Your ad could be here.": "Тут можно было бы увидеть вашу рекламу",
-    "Send reset link": "ссылка для сброса"
+    "Send reset link": "ссылка для сброса",
+    "Sorry, but there are no articles in this category yet": "Извините, но в этой категории пока нет статей",
+    "Sorry, but there are no articles in this tag yet": "Извините, но в этом теге пока нет статей",
+    "from": "из"
 
 }
