search title & description

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -99,6 +99,9 @@
     "Send reset link": "ссылка для сброса",
     "Sorry, but there are no articles in this category yet": "Извините, но в этой категории пока нет статей",
     "Sorry, but there are no articles in this tag yet": "Извините, но в этом теге пока нет статей",
-    "from": "из"
+    "from": "из",
+    "Search result view:": "Просмотр результатов поиска:",
+    "Search by:": "Искать по:"
+
 
 }
