--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -99,5 +99,7 @@
     "Your ad could be here.": "Тут могла бути ваша реклама",
     "Sorry, but there are no articles in this category yet": "Вибачте, але в цій категорії ще немає статей",
     "Sorry, but there are no articles in this tag yet": "Вибачте, але з цим тегом ще немає статей",
-    "from": "із"
+    "from": "із",
+    "Search result view:": "Перегляд результатів пошуку:",
+    "Search by:": "Пошук за:"
 }
