Adding translate sidebar. comments, show

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -101,7 +101,12 @@
     "Sorry, but there are no articles in this tag yet": "Извините, но в этом теге пока нет статей",
     "from": "из",
     "Search result view:": "Просмотр результатов поиска:",
-    "Search by:": "Искать по:"
+    "Search by:": "Искать по:",
+    "To leave a comment, please": "Чтобы оставить комментарий, пожалуйста,",
+    "or": "или",
+    "Related articles": "Статьи по Теме",
+    "Comment(s)": "Комментарий(и)",
+    "Popular Articles": "Популярные статьи"
 
 
 }
