--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -101,5 +101,10 @@
     "Sorry, but there are no articles in this tag yet": "Вибачте, але з цим тегом ще немає статей",
     "from": "із",
     "Search result view:": "Перегляд результатів пошуку:",
-    "Search by:": "Пошук за:"
+    "Search by:": "Пошук за:",
+    "To leave a comment, please": "Щоб залишити коментар, будь ласка",
+    "or": "або",
+    "Related articles": "Схожі статті",
+    "Comment(s)": "Коментар(и)",
+    "Popular Articles": "Популярні статті"
 }
