--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -16,7 +16,7 @@
     "Confirm Password!": "Підтвердьте пароль!",
     "Confirm Password": "Підтвердьте пароль",
     "Password": "Пароль",
-    "My Profile":"Мій профіль",
+    "My Profile": "Мій профіль",
     "My Actions": "Мої дії",
     "Likes": "Подобається",
     "Comments": "Коментарі",
@@ -61,7 +61,6 @@
     "Category meta_description": "Мета_опис категорії",
     "Category meta_keywords": "Мета-ключові слова категорії",
     "Create Category": "Створити категорію",
-    "Category has been created successfully!": "Категорію успішно створено!",
     "Edit Category": "Редагувати категорію",
     "Category has been edited successfully!": "Категорію успішно відредаговано!",
     "Category has been deleted successfully!": "Категорію успішно видалено!",
@@ -74,7 +73,6 @@
     "Tag meta_description": "Мета_опис тега",
     "Tag meta_keywords": "Мета-ключові слова тега",
     "Create Tag": "Створити тег",
-    "Tag has been created successfully!": "Тег успішно створено!",
     "Edit Tag": "Редагувати Тег",
     "Tag has been edited successfully!": "Тег успішно відредаговано!",
     "Tag has been deleted successfully!": "Тег успішно видалено!",
@@ -106,5 +104,22 @@
     "or": "або",
     "Related articles": "Схожі статті",
     "Comment(s)": "Коментар(и)",
-    "Popular Articles": "Популярні статті"
+    "Popular Articles": "Популярні статті",
+    "Back to site": "Повернутися на сайт",
+    "Article has been created successfully!": "Стаття успішно створена!",
+    "Article has been updated successfully!": "Статтю успішно оновлено!",
+    "Article has been deleted successfully!": "Стаття успішно видалена!",
+    "Category has been created successfully!": "Категорію успішно створено!",
+    "Category has been updated successfully!": "Категорію успішно оновлено!",
+    "Tag has been created successfully!": "Тег успішно створено!",
+    "Tag has been updated successfully!": "Тег успішно оновлено!",
+    "Update": "оновлення",
+    "My Comment": "Мій коментар",
+    "comment content": "зміст коментаря",
+    "You have successfully update comment on the article": "Ви успішно оновили коментар до статті",
+    "You have successfully commented on the article": "Ви успішно прокоментували статтю",
+    "Comment has been deleted successfully": "Коментар успішно видалено",
+    "Upload": "Завантажити",
+    "Updated Successfully": "Оновлено успішно",
+    "Not Update Successfully":"Не вдалося оновити"
 }
