about page full

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -121,6 +121,7 @@
     "Comment has been deleted successfully": "Комментарий успешно удален",
     "Upload": "Загрузить",
     "Updated Successfully": "Успешно Обновлено",
-    "Not Update Successfully":"Не удалось обновить"
+    "Not Update Successfully":"Не удалось обновить",
+    "Portfolio": "Портфолио"
 
 }
