--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -121,5 +121,6 @@
     "Comment has been deleted successfully": "Коментар успішно видалено",
     "Upload": "Завантажити",
     "Updated Successfully": "Оновлено успішно",
-    "Not Update Successfully":"Не вдалося оновити"
+    "Not Update Successfully":"Не вдалося оновити",
+    "Portfolio": "Портфоліо"
 }
