change media settings sass

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -9,7 +9,7 @@
     "Settings": "Настройки",
     "Categories": "Категории",
     "Tag Cloud": "Облако тегов",
-    "Continue reading": "Продолжить чтение",
+    "Continue": "Продолжить",
     "Verify Email": "Подтвердить Email",
     "Please verify your email. We just emailed you verification link.": "Пожалуйста, подтвердите свой адрес электронной почты. Мы только что отправили вам ссылку для подтверждения.",
     "Resend verification link": "Повторно отправить ссылку для подтверждения",
