--- a/resources/lang/ua.json
+++ b/resources/lang/ua.json
@@ -9,7 +9,7 @@
     "Settings": "Налаштування",
     "Categories": "Категорії",
     "Tag Cloud": "Хмара тегів",
-    "Continue reading": "Продовжити читання",
+    "Continue": "Продовжити",
     "Verify Email": "Підтвердити електронну адресу",
     "Please verify your email. We just emailed you verification link.": "Будь ласка, підтвердьте свою електронну адресу. Ми щойно надіслали вам електронною поштою посилання для підтвердження.",
     "Resend verification link": "Повторно надіслати посилання для підтвердження",
